trunk/Archive2/88/192c9e1a44ed0a/output
main.cpp: In function 'int main()':
main.cpp:33:24: error: expected primary-expression before ']' token
     char* p = new char[]{ "Zorro" };
                        ^
main.cpp:33:35: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
     char* p = new char[]{ "Zorro" };
                                   ^
main.cpp:34:25: error: expected primary-expression before ']' token
     char* p1 = new char[]{ "Zio" };
                         ^
main.cpp:34:34: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
     char* p1 = new char[]{ "Zio" };
                                  ^
